[Node] support Sync profiles and fix issues
